--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.9",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viem": "^2.0.3",
+    "wagmi": "^2.0.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
